tests/integration/snapshots/integration__conformance__i_number_double_huge_neg_exp.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[123.456e-789]
stdout ---
[123.456e-789]

stderr ---
