tests/integration/snapshots/integration__conformance__i_number_double_huge_neg_exp.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdin ---
[123.456e-789]
stdout ---
[123.456e-789]

stderr ---
