tests/integration/snapshots/integration__conformance__i_number_neg_int_huge_exp.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 0
success: true
stdin ---
[-1e+9999]
stdout ---
[-1e+9999]

stderr ---
