tests/integration/snapshots/integration__conformance__i_number_pos_double_huge_exp.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[1.5e+9999]
stdout ---
[1.5e9999]

stderr ---
