tests/integration/snapshots/integration__conformance__i_number_pos_double_huge_exp.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdin ---
[1.5e+9999]
stdout ---
[1.5e+9999]

stderr ---
