tests/integration/snapshots/integration__conformance__i_number_real_neg_overflow.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[-123123e100000]
stdout ---
[-123123e100000]

stderr ---
